<video><source> tag wont load added src to video tag

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4,6 +4,12 @@
 h2 {
   color: #ff0000;
 }
+.linknimage {
+  width: 50%;
+  height: auto;
+  display: inline-block;
+  overflow: hidden;
+}
 .linknimage .img-responsive {
   display: inline-block;
   float: right;
