--- a/app/views/list.html
+++ b/app/views/list.html
@@ -1,15 +1,9 @@
 <div ng-controller="NodeListCtrl">
-  <h3> {{ greeting }} </h3>
-  <div ng-repeat="(key, value) in nodeList">
+  <h3> Node List </h3>
+  <div ng-repeat="(key, value) in nodeList" class="linknimage">
     <span> {{ key }} </span>
-    <span> node-id: {{nodeList[key].nid[key].value}} </span>
+    <span> node-id: {{nodeList[key].nid[0].value}} </span>
     <a ng-href="/#!/node/{{nodeList[key].nid[0].value}}" src class="" alt=""><span class="">{{ nodeList[key].title[0].value}} </span> >></a>
-    <img
-      ng-src={{value.field_image.url}}
-      src="//:0"
-      width={{value.field_image.width}}
-      height={{value.field_image.height}}
-      alt={{value.field_image.alt}}
-      class="img-responsive"/>
+    <img ng-src={{nodeList[key].field_image[0].url}} width="200" height="150" alt={{nodeList[key].field_image[0].alt}} class="img-responsive"/>
   </div>
 </div>
