--- a/app/views/node.html
+++ b/app/views/node.html
@@ -9,10 +9,9 @@
       <img ng-src={{url}} src="//:0" width={{width}} height={{height}} alt={{alt}} class="img-responsive">
 
       <div class="video0-wrapper">
-
         <!-- first try HTML5 playback: if serving as XML, expand `controls` to `controls="controls"` and autoplay likewise -->
         <!-- warning: playback does not work on iOS3 if you include the poster attribute! fixed in iOS4.0 -->
-        <video width="640" height="360" src="{{vidUrl}}" controls>
+        <video width="640" height="360" src="{{vidUrl}}" autoplay="autoplay" controls="controls">
           <!-- MP4 must be first for iPad! -->
           <source src="{{vidUrl}}" type="video/webm" /><!-- Safari / iOS video    -->
         </video>
